crates/plotinator-hdf5/src/snapshots/plotinator_hdf5__tsc__tests__read_bfield_and_zero_pos-2.snap
---
source: crates/plotinator-hdf5/src/tsc.rs
expression: bfield_first_10
---
[
    [
        1.7556088924523807e18,
        -0.07902017765620253,
    ],
    [
        1.7556088924523812e18,
        -0.06583807652565361,
    ],
    [
        1.7556088924523825e18,
        0.6293366852930741,
    ],
    [
        1.7556088924523853e18,
        13.203033148278188,
    ],
    [
        1.7556088924523912e18,
        39.63980939472112,
    ],
    [
        1.7556088924523917e18,
        41.45278287493414,
    ],
    [
        1.7556088924523922e18,
        44.17380032148612,
    ],
    [
        1.7556088924523935e18,
        50.59724988667217,
    ],
    [
        1.7556088924523963e18,
        55.27305704428121,
    ],
    [
        1.7556088924524027e18,
        55.65273052849186,
    ],
]
