crates/plotinator-hdf5/src/snapshots/plotinator_hdf5__tsc__tests__read_bfield_and_zero_pos.snap
---
source: crates/plotinator-hdf5/src/tsc.rs
expression: zero_pos_first_10
---
[
    [
        1.7556088924527316e18,
        85.05178564382665,
    ],
    [
        1.7556088924553987e18,
        117.35662490892238,
    ],
    [
        1.7556088924580654e18,
        114.08883998196099,
    ],
    [
        1.7556088924607322e18,
        111.17494376996586,
    ],
    [
        1.755608892463399e18,
        108.64274905773992,
    ],
    [
        1.7556088924660657e18,
        106.35058447269333,
    ],
    [
        1.7556088924687327e18,
        104.53123722929631,
    ],
    [
        1.7556088924713994e18,
        102.90991121936587,
    ],
    [
        1.7556088924740662e18,
        101.1492315689125,
    ],
    [
        1.755608892476733e18,
        99.7552605889205,
    ],
]
