crates/plotinator-hdf5/src/snapshots/plotinator_hdf5__tsc__tests__read_tsc.snap
---
source: crates/plotinator-hdf5/src/tsc.rs
expression: hm_series
---
Ok(
    [
        [
            1.7556088924523802e18,
            0.0,
        ],
        [
            1.7556088935537728e18,
            0.0,
        ],
        [
            1.7556088946551662e18,
            0.0,
        ],
        [
            1.7556088957565594e18,
            0.0,
        ],
    ],
)
