crates/plotinator-hdf5/src/snapshots/plotinator_hdf5__tsc__tests__read_tsc_from_path.snap
---
source: crates/plotinator-hdf5/src/tsc.rs
expression: tsc.first_timestamp()
---
2025-08-19T13:08:12.452380049Z
